--- a/techzone.html
+++ b/techzone.html
@@ -51,7 +51,7 @@ reikia.</p>
   <ul>
      <li>
         <img src="nesiojamikomp.png" alt="Nesiojami kompiuteriai" width="150">
-         <a href="kategorijos/kategorijos.html">Nesiojami kompiuteriai</a>
+         <a href="kategorijos.html">Nesiojami kompiuteriai</a>
      </li>
      <li>
         <img src="telefonai.png" alt="telenonai" width="150">
@@ -72,4 +72,5 @@ reikia.</p>
   </footer>
   </main>
 </body>
+
 </html>
