--- a/kompiuteriai.html
+++ b/kompiuteriai.html
@@ -10,7 +10,8 @@
       <li><a href="kompiuteris2.html">Kompiuteris 2</a>
       <li><a href="kompiuteris3.html">Kompiuteris 3</a>
   </ul>
-  <p><a href="../kategorijos.html">Grizti i kategorijas</a></p>
-  <p><a href="../../techzone.html">Grizti i pagrindini puslapi</a></p>
+  <p><a href="kategorijos.html">Grizti i kategorijas</a></p>
+  <p><a href="techzone.html">Grizti i pagrindini puslapi</a></p>
 </body>
+
 </html>
