--- a/kompiuteris3.html
+++ b/kompiuteris3.html
@@ -76,10 +76,11 @@
 			 <td>2560 x 1600 (QHD)</td>
 		</tr>		
 	</table>
-   <p><a href="../kategorijos.html">Grizti i kompiuteriu sarasa</a></p>
-   <p><a href="../../techzone.html">Grizti i pagrindini puslapi</a></p>
+   <p><a href="kategorijos.html">Grizti i kompiuteriu sarasa</a></p>
+   <p><a href="techzone.html">Grizti i pagrindini puslapi</a></p>
 <footer>
 <p>&copy; 2025 TecZone</p>
   </footer>
 </body>
+
 </html>
