--- a/kompiuteris2.html
+++ b/kompiuteris2.html
@@ -76,10 +76,11 @@
 			 <td> FHD (1920 x 1080)</td>
 		</tr>		
 	</table>
-   <p><a href="../kategorijos.html">Grizti i kompiuteriu sarasa</a></p>
-   <p><a href="../../techzone.html">Grizti i pagrindini puslapi</a></p>
+   <p><a href="kategorijos.html">Grizti i kompiuteriu sarasa</a></p>
+   <p><a href="techzone.html">Grizti i pagrindini puslapi</a></p>
   <footer>
 <p>&copy; 2025 TecZone</p>
   </footer>
 </body>
 </html>
+
